[package]
edition      = "2024"
name         = "esp32-http-servo"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "esp32-http-servo"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "1.0.0", features = ["esp32", "unstable"] }


esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32"] }

critical-section = "1.2.0"
esp-radio = { version = "0.17.0", features = ["esp32", "wifi", "smoltcp", "unstable", "ble", "coex"] }
esp-rtos = { version = "0.2.0", features = ["embassy", "esp32", "esp-radio"] }
embassy-net = { version = "0.7.1", features = ["tcp", "udp", "dhcpv4", "medium-ethernet"] }
esp-println = { version = "0.16.1", features = ["esp32", "log-04"] }
esp-alloc = "0.9.0"
esp-backtrace = { version = "0.18.1", features = ["esp32", "panic-handler", "println"] }
embassy-executor = "0.9.1"
embassy-time = "0.5.0"
static_cell = "2.1.1"
embassy-sync = "0.7.2"
embassy-futures = "0.1.2"
embedded-io = "0.7.1"

# OLED display support
embedded-graphics = "0.8"
ssd1306 = "0.9"
heapless = "0.8"
trouble-host = { version = "0.5.1", features = ["gatt"] }
esp-storage = { version = "0.8.1", features = ["esp32"] }
embedded-storage = "0.3.1"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
